apps/palworld-ideal-giraffe/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: palworld-ideal-giraffe
  labels:
    app: palworld
    component: proton
