apps/palworld-ideal-giraffe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: palworld
  namespace: palworld-ideal-giraffe
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/proxy-group: heimdall
    tailscale.com/hostname: ideal-giraffe
spec:
  selector:
    app: palworld
  ports:
  - name: game
    port: 8212
    protocol: UDP
    targetPort: game
  - name: query
    port: 27015
    protocol: UDP
    targetPort: query
  - name: rcon
    port: 25575
    protocol: TCP
    targetPort: rcon
  - name: rest-api
    port: 8212
    protocol: TCP
    targetPort: rest-api
