apps/palworld-ideal-giraffe/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: palworld-ideal-giraffe
spec:
  gatewayClassName: internet
  addresses:
  - type: IPAddress
    value: 10.43.64.20
  listeners:
  - name: palworld-ideal-giraffe-udp
    protocol: UDP
    port: 9211
    allowedRoutes:
      namespaces:
        from: All
